changed fonts to web safe fonts and fixed text alignment

--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body {
   background-color: #DBD1CA;
 }
+
 h1 {
-  font-family: Times New Roman;
+  font-family: 'Times New Roman', serif;
+  text-align: center;
 }
+
 h2 {
-  font-family: Brush Script;
+  font-family: 'Brush Script MT', cursive;
+  text-align: center;
 }
